--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "full": "npm run lint && npm run build && npm run coverage",
     "lint": "yarn eslint . --ext .ts",
     "build": "tsc",
-    "coverage": "nyc --check-coverage --branches 100 mocha"
+    "coverage": "nyc --check-coverage --branches 100 mocha",
+    "start": "node dist/src/app.js"
   },
   "mocha": {
     "require": "ts-node/register, source-map-support/register",
@@ -35,12 +36,14 @@
   "dependencies": {
     "@types/chai": "^4.2.7",
     "@types/mocha": "^5.2.7",
+    "@types/request": "^2.48.4",
     "@typescript-eslint/eslint-plugin": "^2.17.0",
     "@typescript-eslint/parser": "^2.17.0",
     "chai": "^4.2.0",
     "eslint": "^6.8.0",
     "mocha": "^7.0.0",
     "nyc": "^15.0.0",
+    "request": "^2.88.0",
     "ts-node": "^8.6.2",
     "typescript": "^3.7.5"
   }
