Extracts URLs by regex

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "yarn eslint . --ext .ts",
     "build": "tsc",
     "coverage": "nyc --check-coverage --branches 100 mocha",
-    "start": "node dist/src/app.js"
+    "start": "node dist/src/app.js",
+    "test": "nyc mocha"
   },
   "mocha": {
     "require": "ts-node/register, source-map-support/register",
