--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@types/chai": "^4.2.7",
     "@types/mocha": "^5.2.7",
     "@types/request": "^2.48.4",
+    "@types/request-promise": "^4.1.45",
+    "@types/sinon": "^7.5.1",
     "@typescript-eslint/eslint-plugin": "^2.17.0",
     "@typescript-eslint/parser": "^2.17.0",
     "chai": "^4.2.0",
@@ -45,6 +47,8 @@
     "mocha": "^7.0.0",
     "nyc": "^15.0.0",
     "request": "^2.88.0",
+    "request-promise": "^4.2.5",
+    "sinon": "^8.1.1",
     "ts-node": "^8.6.2",
     "typescript": "^3.7.5"
   }
